add simple form

--- a/index.html
+++ b/index.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
     <head>
-        <meta charset="utf-8" />
-        <title>Webpack App</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
+        <title>Hexlet frontend project</title>
     </head>
-    <body>
-        <h1>Hello world!</h1>
-        <h2>Tip: Check your console</h2>
-    </body>
 
-    <script>
-        if ("serviceWorker" in navigator) {
-            window.addEventListener("load", () => {
-                navigator.serviceWorker
-                    .register("service-worker.js")
-                    .then((registration) => {
-                        console.log("Service Worker registered: ", registration);
-                    })
-                    .catch((registrationError) => {
-                        console.error("Service Worker registration failed: ", registrationError);
-                    });
-            });
-        }
-    </script>
+    <body>
+        <main>
+            <section>
+                <div class="form-container">
+                    <h1>RSS агрегатор</h1>
+                    <p>Начните читать RSS сегодня! Это легко, это красиво.</p>
+                    <form action="">
+                        <input type="Ссылка RSS">
+                        <button>Добавить</button>
+                    </form>
+                    <p>Пример: https://ru.hexlet.io/lessons.rss</p>
+                </div>
+            </section>
+            <section></section>
+        </main>
+
+        <footer>
+            <div class="footer-container">
+                created by
+                <a href="https://ru.hexlet.io/professions/frontend/projects/11" target="_blank">Hexlet</a>
+            </div>
+        </footer>
+    </body>
 </html>
